--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<!--The content below is only a placeholder and can be replaced.-->
-
+<app-header></app-header>
+<div class="conatiner" style="padding-top:60px">   
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
