commit different modules for weekly report

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
+<h1>Weekly Status</h1>
+
+
+
+
+<app-navbar>  </app-navbar>
+
+
+
+
+
+<router-outlet></router-outlet>
+
