--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" routerLink="/customers">
+            <a class="navbar-brand" >
                 <img src="assets/images/people.png" alt="logo" />
                 <span class="app-title">Weekly Report Manager</span>
             </a>
